building up jetty side