@@ -13,7 +13,18 @@ dependencies {
     implementation "org.apache.httpcomponents.core5:httpcore5:5.3.4"
     implementation "org.apache.httpcomponents.client5:httpclient5:5.4.4"
 
+    implementation "org.eclipse.jetty:jetty-server:11.0.25"
+    implementation "org.eclipse.jetty:jetty-servlet:11.0.25"
+    implementation "org.eclipse.jetty.http2:http2-server:11.0.25"
+    implementation "org.eclipse.jetty:jetty-alpn-java-server:11.0.25"
+    implementation "org.jboss.weld.se:weld-se-core:6.0.3.Final"
+
+    implementation "org.slf4j:slf4j-api:2.0.17"
+    compileOnly "ch.qos.logback:logback-classic:1.5.18"
+    implementation "info.picocli:picocli:4.7.7"
+
     implementation("com.fasterxml.jackson.core:jackson-databind:2.18.1")
+    implementation "commons-cli:commons-cli:1.9.0"
 
     // view engines
     implementation("com.github.spullara.mustache.java:compiler:0.9.10")
@@ -27,4 +38,16 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += '--enable-preview'
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += '--enable-preview'
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += '--enable-preview'
 }
